--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,26 @@
 # Site settings
-title:
-email:
+title: Mike Drakos Portfolio
+email: drakos@unbc.ca
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my portfolio page for UNBC CPSC 300 - Software Engineering!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
 # User setting
-owner:
-email:
-facebook_username:
-twitter_username:
-github_username:
-address:
-  - line:
-  - line:
+owner: Mike Drakos
+email: drakos@unbc.ca
+facebook_username: Mike Drakos
+twitter_username: m.drakos
+github_username: mdrakos
+address: 3333 University Way
+  - line: Prince George, BC
+  - line: V2N 4Z9
   # Feel free to add more lines here 
 telephone:
 copyright:
 
 # API settings
-google_api_key:
+google_api_key: AIzaSyBzMkAqXOWAmUd7OQTqEkD-H1cjX9hLb7I
 
 # Build settings
 markdown: kramdown
