--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Mike Drakos Portfolio
-email: drakos@unbc.ca
+title: "Mike Drakos Portfolio"
+email: "drakos@unbc.ca"
 description: > # this means to ignore newlines until "baseurl:"
   This is my portfolio page for UNBC CPSC 300 - Software Engineering!
 baseurl: "" # the subpath of your site, e.g. /blog/
