--- a/_config.yml
+++ b/_config.yml
@@ -228,3 +228,13 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+# defaults for pages
+defaults:
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
