--- a/_config.yml
+++ b/_config.yml
@@ -238,3 +238,16 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+defaults:
+  # _posts
+  - scope:
+      path: "_posts"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
