--- a/_config.yml
+++ b/_config.yml
@@ -233,7 +233,7 @@ compress_html:
 defaults:
   # _pages
   - scope:
-      path: "_pages"
+      path: ""
       type: pages
     values:
       layout: single
@@ -242,7 +242,7 @@ defaults:
 defaults:
   # _posts
   - scope:
-      path: "_posts"
+      path: ""
       type: posts
     values:
       layout: single
