--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,9 @@ main:
 
   - title: "Portfolio"
     url: /portfolio/
+
+  - title: "UNBC"
+    url: https://www.unbc.ca
+
+  - title: "PG Transit App"
+    url: 
