--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /portfolio/
 
   - title: "UNBC"
-    url: https://www.unbc.ca
+    url: www.unbc.ca
 
   - title: "PG Transit App"
-    url: 
+    url:
