--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /portfolio/
 
   - title: "UNBC"
-    url: www.unbc.ca
+    url: http://www.unbc.ca
 
   - title: "PG Transit App"
     url:
