--- a/_config.yml
+++ b/_config.yml
@@ -78,10 +78,10 @@ analytics:
 # Site Author
 author:
   name             : "Mike Drakos"
-  avatar           : "bio-photo.jpg"
+  avatar           : "bio.jpeg"
   bio              : "I am a 3rd year Computer Science student at UNBC"
   location         : "Prince George, BC"
-  email            : "drakos@unbc.ca"
+  email            : "drakos@unc.ca"
   uri              :
   bitbucket        :
   codepen          :
