--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Mike Drakos"
 title_separator          : "-"
 name                     : "Mike Drakos"
 description              : "A portfolio website for Mike Drakos, made for CPSC 300 at UNBC"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://mdrakos.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "mdrakos/mdrakos.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
