--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,9 @@ og_image                 : # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links:
+    - "https://twitter.com/mjdrakos"
+    - "https://instagram.com/m.drakos"
 
 # Analytics
 analytics:
@@ -79,9 +81,9 @@ analytics:
 author:
   name             : "Mike Drakos"
   avatar           : "bio.jpeg"
-  bio              : "I am a 3rd year Computer Science student at UNBC"
+  bio              : "Currently completing 4th year Computer Science at the University of Northern BC"
   location         : "Prince George, BC"
-  email            : "drakos@unc.ca"
+  email            : "mike.drakos@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
