--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "Mike Drakos"
 title_separator          : "-"
 name                     : "Mike Drakos"
-description              : "A portfolio website for Mike Drakos, made for CPSC 300 at UNBC"
+description              : "A _portfolio website for Mike Drakos, made for CPSC 300 at UNBC"
 url                      : "https://mdrakos.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "mdrakos/mdrakos.github.io"
@@ -231,6 +231,11 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 # defaults for pages
 defaults:
   # _pages
@@ -253,3 +258,13 @@ defaults:
       comments: true
       share: true
       related: true
+
+defaults:
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
