--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /aboutme/
 
   - title: "Portfolio"
-    url: /_portfolio/
+    url: /portfolio/
 
   - title: "Resume"
     url: /resume/
