--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "Mike Drakos"
 title_separator          : "-"
 name                     : "Mike Drakos"
-description              : "A _portfolio website for Mike Drakos, made for CPSC 300 at UNBC"
+description              : "A portfolio website for Mike Drakos"
 url                      : "https://mdrakos.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "mdrakos/mdrakos.github.io"
