--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   github           : "mdrakos"
   google_plus      :
   keybase          :
-  instagram        : "m.drakos"
+  instagram        : "mdrakos"
   lastfm           :
   linkedin         :
   pinterest        :
