--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   keybase          :
   instagram        : "mdrakos"
   lastfm           :
-  linkedin         :
+  linkedin         : "mikedrakos"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
