Adding link to github profile

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,8 @@ main:
   - title: "Resume"
     url: /resume/
 
+  - title: "Github"
+    url: https://www.github.com/mdrakos
+
   - title: "UNBC"
     url: http://www.unbc.ca
